delete gender profile

--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -47,15 +47,14 @@
         <input type="text" matInput formControlName="lastname" />
       </mat-form-field>
 
-      <mat-form-field appearance="outline">
+      <!-- <mat-form-field appearance="outline">
         <mat-label>Genero</mat-label>
         <mat-select formControlName="gender">
           <mat-option *ngFor="let genre of genders" [value]="genre.value">
             <small>{{ genre.viewValue }}</small>
           </mat-option>
         </mat-select>
-      </mat-form-field>
-
+      </mat-form-field> -->
       <mat-form-field appearance="outline">
         <mat-label>Código Postal</mat-label>
         <input type="text" matInput formControlName="postalcode" />
