--- a/src/app/associations/associations.component.html
+++ b/src/app/associations/associations.component.html
@@ -1,4 +1,9 @@
-<p>associations works!</p>
-<p>associations works!</p>
-<p>associations works!</p>
-<p>associations works!</p>
+<mat-card>
+    Asociaciones
+    <mat-tab-group [disableRipple]="true" [@.disabled]="true">
+        <mat-tab label="Mis Asociaciones"><p>Mis Asociaciones
+        </p><p><a href="/asociaciones/asociacion">Lectivo</a></p>
+        </mat-tab>
+        <mat-tab label="Invitaciones">Invitaciones</mat-tab>
+    </mat-tab-group>
+</mat-card>
