--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -47,7 +47,7 @@
         <input type="text" matInput formControlName="lastname" />
       </mat-form-field>
 
-      <mat-form-field appearance="outline">
+      <!-- <mat-form-field appearance="outline">
         <mat-label>Genero</mat-label>
         <mat-select formControlName="gender">
           <mat-option *ngFor="let genre of genders" [value]="genre.value">
@@ -58,13 +58,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Código Postal</mat-label>
         <input type="text" matInput formControlName="postalcode" />
-      </mat-form-field>
-      <!-- 
-            <mat-form-field appearance="outline">
-                <mat-label>Ocupacion</mat-label>
-                <input matInput formControlName="ocupation">
-            </mat-form-field> -->
-
+      </mat-form-field> -->
       <mat-form-field appearance="outline">
         <mat-label>Télefono</mat-label>
         <input
