--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
@@ -1,4 +1,5 @@
 <div class="set-12 topic-card">
+    
     <mat-card *ngFor="let topic of topics">
         <div class="dialog-body"  (click)="openDialog(topic._id)">
             <span class="set-12 "><strong>{{topic.title | slice:0:35}}<strong *ngIf="(topic.title).length > 35">...</strong></strong></span>
@@ -28,4 +29,9 @@
             </button> -->
         </div> 
     </mat-card>
+    <mat-paginator [length]="20"
+    [pageSize]="10"
+    [pageSizeOptions]="[5, 10]"
+    aria-label="Select page">
+</mat-paginator>
 </div>
