--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -11,11 +11,9 @@
   </div>
 
   <div class="set-12 author-hldr">
-    <!-- <span class="created-by">
-      Autor: <span class="author">{{document.createdBy.firstname}} {{document.createdBy.lastname}}</span>
-    </span> -->
-    <span class="created-by">Autor: <span class="author">Mexicolectivo</span>
-    </span>
+    <p class="created-by">
+      Autor: <span class="author">Mexicolectivo</span>
+    </p>
   </div>
 
   <div class="set-12">
