--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -9,13 +9,11 @@
       <li (click)="utilityService.linkMe('/documentos/' + document._id)">
         {{ document.title }}
       </li>
-      <li
-        (click)="
+      <li (click)="
           utilityService.linkMe(
             '/documentos/' + document._id + '/categoria/' + selectedCategory._id
           )
-        "
-      >
+        ">
         {{ selectedCategory.category.name }}
       </li>
       <li>{{ subcategory.category.name }}</li>
@@ -25,10 +23,8 @@
   <div class="set-12 author-hldr">
     <span class="created-by">
       Autor:
-      <span class="author"
-        >{{ subcategory.createdBy.firstname }}
-        {{ subcategory.createdBy.lastname }}</span
-      >
+      <span class="author">{{ subcategory.createdBy.firstname }}
+        {{ subcategory.createdBy.lastname }}</span>
     </span>
   </div>
 
@@ -36,14 +32,8 @@
     <div class="set-3 col-lft">
       <mat-card class="set-12 doc-description">
         <div class="set-12 imghldr">
-          <mat-icon class="pano" *ngIf="subcategory.images.length == 0"
-            >panorama</mat-icon
-          >
-          <img
-            [src]="subcategory.images[0]"
-            alt=""
-            *ngIf="subcategory.images.length != 0"
-          />
+          <mat-icon class="pano" *ngIf="subcategory.images.length == 0">panorama</mat-icon>
+          <img [src]="subcategory.images[0]" alt="" *ngIf="subcategory.images.length != 0" />
           <div class="overlay" (click)="popImageViewer()">
             <mat-icon color="accent">photo_camera</mat-icon>
             <div class="cover"></div>
@@ -54,13 +44,9 @@
           <div class="set-12 card-title">
             <div class="set-10">{{ subcategory.category.name }}</div>
             <div class="set-2 txt-right">
-              <button
-                type="button"
-                [matMenuTriggerFor]="menu"
-                [disabled]="
+              <button type="button" [matMenuTriggerFor]="menu" [disabled]="
                   !actionControlActivityList.includes(user.activityName)
-                "
-              >
+                ">
                 <mat-icon>more_vert</mat-icon>
               </button>
 
@@ -70,11 +56,7 @@
                   <span>Editar categoría</span>
                 </button>
 
-                <button
-                  type="button"
-                  mat-menu-item
-                  (click)="popDocumentComments()"
-                >
+                <button type="button" mat-menu-item (click)="popDocumentComments()">
                   <mat-icon>question_answer</mat-icon>
                   <span>Ver comentarios</span>
                 </button>
@@ -97,11 +79,7 @@
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
             <mat-select (selectionChange)="onSelectCoverage($event)">
-              <mat-option
-                *ngFor="let option of document.coverage"
-                [value]="option._id"
-                [disabled]="!option.enabled"
-              >
+              <mat-option *ngFor="let option of document.coverage" [value]="option._id" [disabled]="!option.enabled">
                 <small>{{ option.name | titlecase }}</small>
               </mat-option>
             </mat-select>
@@ -109,37 +87,16 @@
         </div>
 
         <div class="set-8 txt-right">
-          <button
-            type="button"
-            mat-mini-fab
-            color="primary"
-            class="mini"
-            matTooltip="Agregar Comentario"
-            matTooltipClass="tooltip"
-            (click)="popAddCommentsDialog()"
-          >
+          <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Comentario"
+            matTooltipClass="tooltip" (click)="popAddCommentsDialog()">
             <mat-icon>add_comment</mat-icon>
           </button>
-          <button
-            type="button"
-            mat-mini-fab
-            color="warn"
-            class="mini"
-            matTooltip="Agregar Colaborador"
-            matTooltipClass="tooltip"
-            (click)="popAddDocumentCollaborator()"
-          >
+          <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Colaborador"
+            matTooltipClass="tooltip" (click)="popAddDocumentCollaborator()">
             <mat-icon>person_add</mat-icon>
           </button>
-          <button
-            type="button"
-            mat-mini-fab
-            color="accent"
-            class="mini"
-            matTooltip="Agregar Tema"
-            matTooltipClass="tooltip"
-            (click)="popAddDocumentTheme()"
-          >
+          <button type="button" mat-mini-fab color="accent" class="mini" matTooltip="Agregar Tema"
+            matTooltipClass="tooltip" (click)="popAddDocumentTheme()">
             <mat-icon>list</mat-icon>
           </button>
         </div>
@@ -155,11 +112,8 @@
               </p>
 
               <ol class="top-list">
-                <li
-                  class="top-list-item"
-                  *ngFor="let solution of solutions.slice(0, 4)"
-                  (click)="linkSolution(solution._id, solution.theme._id)"
-                >
+                <li class="top-list-item" *ngFor="let solution of solutions.slice(0, 4)"
+                  (click)="linkSolution(solution._id, solution.theme._id)">
                   <span>{{ solution.title }}</span>
                 </li>
               </ol>
@@ -176,11 +130,7 @@
               </p>
 
               <ol class="top-list">
-                <li
-                  class="top-list-item"
-                  *ngFor="let topic of topics.slice(0, 4)"
-                  (click)="linkTopic(topic._id)"
-                >
+                <li class="top-list-item" *ngFor="let topic of topics.slice(0, 4)" (click)="linkTopic(topic._id)">
                   <span>{{ topic.title }}</span>
                 </li>
               </ol>
@@ -197,12 +147,7 @@
               [disabled]="topics.length == 0"> -->
             <mat-form-field appearance="outline">
               <mat-label>Búscar en temas...</mat-label>
-              <input
-                matInput
-                type="text"
-                (keyup)="applyFilter($event)"
-                [disabled]="topics.length == 0"
-              />
+              <input matInput type="text" (keyup)="applyFilter($event)" [disabled]="topics.length == 0" />
               <button matSuffix mat-icon-button>
                 <mat-icon>search</mat-icon>
               </button>
@@ -213,30 +158,16 @@
             <p>
               <small>Sin temas disponibles.</small>
             </p>
-            <button
-              type="button"
-              mat-raised-button
-              color="primary"
-              (click)="popAddDocumentTheme()"
-            >
+            <button type="button" mat-raised-button color="primary" (click)="popAddDocumentTheme()">
               <small>Agregar Tema</small>
             </button>
           </div>
 
-          <table
-            mat-table
-            [dataSource]="dataSource"
-            class="categories-table"
-            *ngIf="topics.length != 0"
-          >
+          <table mat-table [dataSource]="dataSource" class="categories-table" *ngIf="topics.length != 0">
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element">
-                <button
-                  type="button"
-                  class="catbtn"
-                  (click)="linkTopic(element._id)"
-                >
+                <button type="button" class="catbtn" (click)="linkTopic(element._id)">
                   <mat-icon>question_answer</mat-icon>
                   <small>{{ element.title }}</small>
                 </button>
@@ -274,18 +205,11 @@
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element">
-                <button
-                  type="button"
-                  mat-icon-button
-                  [matMenuTriggerFor]="menu"
-                >
+                <button type="button" mat-icon-button [matMenuTriggerFor]="menu">
                   <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button
-                    type="button"
-                    mat-menu-item
-                    (click)="
+                  <button type="button" mat-menu-item (click)="
                       linkMe(
                         '/documentos-publicos/' +
                           document._id +
@@ -296,15 +220,11 @@
                           '/tema/' +
                           element._id
                       )
-                    "
-                  >
+                    ">
                     <mat-icon>groups</mat-icon>
                     <small>Abrir público</small>
                   </button>
-                  <button
-                    type="button"
-                    mat-menu-item
-                    (click)="
+                  <button type="button" mat-menu-item (click)="
                       linkMe(
                         '/documentos/' +
                           document._id +
@@ -315,49 +235,31 @@
                           '/temas/' +
                           element._id
                       )
-                    "
-                  >
+                    ">
                     <mat-icon>lock</mat-icon>
                     <small>Abrir privado</small>
                   </button>
-                  <button
-                    type="button"
-                    mat-menu-item
-                    *ngIf="
+                  <button type="button" mat-menu-item *ngIf="
                       actionControlActivityList.includes(user.activityName)
-                    "
-                  >
+                    ">
                     <mat-icon>settings</mat-icon>
                     <small>Editar</small>
                   </button>
-                  <button
-                    type="button"
-                    mat-menu-item
-                    *ngIf="
+                  <button type="button" mat-menu-item *ngIf="
                       actionControlActivityList.includes(user.activityName)
-                    "
-                  >
+                    ">
                     <mat-icon>drag_handle</mat-icon>
                     <small>Duplicar</small>
                   </button>
-                  <button
-                    type="button"
-                    mat-menu-item
-                    *ngIf="
+                  <button type="button" mat-menu-item *ngIf="
                       actionControlActivityList.includes(user.activityName)
-                    "
-                  >
+                    ">
                     <mat-icon>exit_to_app</mat-icon>
                     <small>Mover</small>
                   </button>
-                  <button
-                    type="button"
-                    mat-menu-item
-                    (click)="killTopic(element)"
-                    *ngIf="
+                  <button type="button" mat-menu-item (click)="killTopic(element)" *ngIf="
                       actionControlActivityList.includes(user.activityName)
-                    "
-                  >
+                    ">
                     <mat-icon>delete</mat-icon>
                     <small>Eliminar</small>
                   </button>
