--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -60,7 +60,7 @@
     <mat-menu #menu="matMenu">
       <button mat-menu-item (click)="popPDF()">
         <mat-icon>groups</mat-icon>
-        <span>Encuentro colectivo</span>
+        <span>Documento Punto de Partida</span>
       </button>
       <button mat-menu-item (click)="linkMe('userList')" *ngIf="userActivities.includes('moderator')">
         <mat-icon>groups</mat-icon>
