--- a/src/app/components/image-viewer/image-viewer.component.html
+++ b/src/app/components/image-viewer/image-viewer.component.html
@@ -22,16 +22,17 @@
 
   <!-- layout viewer -->
   <div class="viewer-display" *ngIf="dialogData.location == 'layout'">
-    <div class="set-12 txt-center" *ngIf="layout.images.length == 0">
-      <button type="button" (click)="file.click()" [disabled]="submitted"
-        *ngIf="utilityService.actionControlActivityList.includes(user.activityName)">
-        <mat-icon>add_a_photo</mat-icon>
-        <p>Cargar imágenes</p>
-      </button>
-      <mat-spinner color="accent" diameter="70" *ngIf="submitted"></mat-spinner>
-      <p class="txt-center" *ngIf="submitted">Cargando...</p>
+    <div class="set-12">
+      <div class="set-12 imgldr" *ngIf="utilityService.actionControlActivityList.includes(user.activityName)">
+        <button type="button" mat-mini-fab color="warn" (click)="file.click()" [disabled]="submitted"
+          matTooltip="Cargar imágenes" matTooltipClass="tooltip">
+          <mat-icon>add_a_photo</mat-icon>
+        </button>
+        <mat-spinner color="accent" diameter="70" *ngIf="submitted"></mat-spinner>
+        <p class="txt-center" *ngIf="submitted">Cargando...</p>
+      </div>
+      <slider-images [images]="layout.images" [layout]="layout" *ngIf="layout.images != 0"></slider-images>
     </div>
-    <slider-images [images]="layout.images" [layout]="layout" *ngIf="layout.images != 0"></slider-images>
   </div>
 
   <!-- topic viewer -->
@@ -69,8 +70,5 @@
     <button mat-icon-button (click)="killDialog()" matTooltip="Salir" matTooltipClass="tooltip">
       <mat-icon>cancel</mat-icon>
     </button>
-    <!-- <button mat-icon-button>
-      <mat-icon>menu</mat-icon>
-    </button> -->
   </mat-toolbar>
 </div>
