--- a/src/app/associations/associations.component.html
+++ b/src/app/associations/associations.component.html
@@ -1,9 +1,22 @@
-<mat-card>
-    Asociaciones
-    <mat-tab-group [disableRipple]="true" [@.disabled]="true">
-        <mat-tab label="Mis Asociaciones"><p>Mis Asociaciones
-        </p><p><a href="/asociaciones/asociacion">Lectivo</a></p>
-        </mat-tab>
-        <mat-tab label="Invitaciones">Invitaciones</mat-tab>
-    </mat-tab-group>
-</mat-card>
+<div  class="set-12" *ngIf="isDataAvailable && isMobile"> 
+  <mat-tab-group [disableRipple]="true" [@.disabled]="true">
+    <mat-tab label="Mis Asociaciones"
+      >
+      <mat-card *ngFor="let association of associations">
+        <h4>
+          <strong>{{ association.businessName }}</strong>
+        </h4>
+        <p>
+          <span>{{ association.description }}</span>
+        </p>
+        <div class="set-12 joinButton">
+            <button type="button" mat-raised-button color="warn" (click)="linkMe('profile', association._id)" >
+              <small>Ir a perfil</small>
+            </button>
+          </div>
+      </mat-card>
+    </mat-tab>
+    <mat-tab label="Invitaciones">Invitaciones</mat-tab>
+  </mat-tab-group>
+</div>
+
