--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -24,12 +24,10 @@
         </div>
 
         <div class="set-12 cardctrls">
-          <button type="button" mat-mini-fab color="primary" matTooltip="Compartir" matTooltipClass="tooltip"
-            (click)="openBottomSheet()">
+          <button type="button" matTooltip="Compartir" matTooltipClass="tooltip" (click)="openBottomSheet()">
             <mat-icon>share</mat-icon>
           </button>
-          <button type="button" mat-mini-fab color="primary" matTooltip="Comentar" matTooltipClass="tooltip"
-            (click)="handleComments()">
+          <button type="button" matTooltip="Comentar" matTooltipClass="tooltip" (click)="handleComments()">
             <mat-icon>forum</mat-icon>
           </button>
         </div>
