--- a/src/app/hub/sign-up-mobile/sign-up-mobile.component.html
+++ b/src/app/hub/sign-up-mobile/sign-up-mobile.component.html
@@ -3,23 +3,12 @@
 </div>
 
 <div class="set-12" *ngIf="isDataAvailable">
-  <mat-stepper
-    #stepper
-    [disableRipple]="true"
-    [linear]="true"
-    [@.disabled]="true"
-  >
+  <mat-stepper #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
     <mat-step>
       <div class="set-12">
         <h1>¡Hola!</h1>
         <h3>Necesitas una cuenta para ingresar</h3>
-        <input
-          #fileInput
-          type="file"
-          (change)="openCropperDialog($event)"
-          accept="image/*"
-          hidden
-        />
+        <input #fileInput type="file" (change)="openCropperDialog($event)" accept="image/*" hidden />
       </div>
 
       <!-- <div class="set-12 avatarhldr">
@@ -64,12 +53,7 @@
         <div class="set-12">
           <mat-form-field appearance="outline">
             <mat-label>Contraseña</mat-label>
-            <input
-              matInput
-              [type]="hide ? 'password' : 'text'"
-              autocomplete="off"
-              formControlName="password"
-            />
+            <input matInput [type]="hide ? 'password' : 'text'" autocomplete="off" formControlName="password" />
             <button type="button" matSuffix (click)="hide = !hide">
               <mat-icon color="primary">
                 {{ hide ? "visibility_off" : "visibility" }}
@@ -87,12 +71,7 @@
         </div> -->
 
         <div class="set-12 ctrls">
-          <button
-            mat-raised-button
-            color="warn"
-            matStepperNext
-            [disabled]="stepOneFormGroup.invalid"
-          >
+          <button mat-raised-button color="warn" matStepperNext [disabled]="stepOneFormGroup.invalid">
             <small>Siguiente</small>
           </button>
         </div>
@@ -100,49 +79,27 @@
     </mat-step>
 
     <mat-step>
-      <div class="set-12">
-        <p>
-          <small *ngIf="!viewSubLayouts"
-            >Organiza las categorías por interés</small
-          >
-          <small *ngIf="viewSubLayouts"
-            >Organiza las sub categorías por interés</small
-          >
-        </p>
+      <div class="set-12 txt-center dragcat">
+        <p>Arrastra y acomoda las categorías según tus intereses.</p>
+        <div class="set-12">
+          <mat-icon>touch_app</mat-icon>
+        </div>
       </div>
 
-      <div
-        cdkDropList
-        class="set-12 drag-list"
-        (cdkDropListDropped)="dragAndDropLayout($event)"
-        *ngIf="!viewSubLayouts"
-      >
-        <div
-          class="set-12 drag-box"
-          *ngFor="let layout of layouts"
-          cdkDrag
-          (click)="onLayoutSelected(layout)"
-        >
+      <div cdkDropList class="set-12 drag-list" (cdkDropListDropped)="dragAndDropLayout($event)"
+        *ngIf="!viewSubLayouts">
+        <div class="set-12 drag-box" *ngFor="let layout of layouts" cdkDrag (click)="onLayoutSelected(layout)">
           <strong>{{ layout.category.name }}</strong>
         </div>
       </div>
 
-      <div
-        cdkDropList
-        class="set-12 drag-sublist"
-        (cdkDropListDropped)="dragAndDropSubLayout($event)"
-        *ngIf="viewSubLayouts"
-      >
+      <div cdkDropList class="set-12 drag-sublist" (cdkDropListDropped)="dragAndDropSubLayout($event)"
+        *ngIf="viewSubLayouts">
         <div class="set-12 drag-box" *ngFor="let layout of sublayouts" cdkDrag>
           <strong>{{ layout.category.name }}</strong>
         </div>
         <div class="set-12 innerctrls">
-          <button
-            type="button"
-            mat-mini-fab
-            color="primary"
-            (click)="hideSubLayouts()"
-          >
+          <button type="button" mat-mini-fab color="primary" (click)="hideSubLayouts()">
             <mat-icon>arrow_back</mat-icon>
           </button>
         </div>
@@ -163,25 +120,17 @@
         <mat-form-field appearance="outline">
           <mat-label>¿Qué te hace feliz de México?</mat-label>
           <mat-chip-list #happyChipList>
-            <mat-chip
-              *ngFor="let item of happyArray"
-              (removed)="removeHappyItem(item)"
-            >
+            <mat-chip *ngFor="let item of happyArray" (removed)="removeHappyItem(item)">
               {{ item.name }}
               <button matChipRemove>
                 <mat-icon>cancel</mat-icon>
               </button>
             </mat-chip>
-            <input
-              placeholder="..."
-              [matChipInputFor]="happyChipList"
-              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-              [matChipInputAddOnBlur]="addOnBlur"
-              (matChipInputTokenEnd)="addHappyItem($event)"
-            />
+            <input placeholder="..." [matChipInputFor]="happyChipList"
+              [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+              (matChipInputTokenEnd)="addHappyItem($event)" />
           </mat-chip-list>
-          <mat-hint
-            >** Presiona <strong>ENTER</strong> después de escribir algo que te
+          <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te
             haga féliz, ej:
             <strong>"Playas"</strong>
           </mat-hint>
@@ -203,25 +152,17 @@
         <mat-form-field appearance="outline">
           <mat-label>¿Qué te entristece de México?</mat-label>
           <mat-chip-list #sadChipList>
-            <mat-chip
-              *ngFor="let item of sadArray"
-              (removed)="removeSadItem(item)"
-            >
+            <mat-chip *ngFor="let item of sadArray" (removed)="removeSadItem(item)">
               {{ item.name }}
               <button matChipRemove>
                 <mat-icon>cancel</mat-icon>
               </button>
             </mat-chip>
-            <input
-              placeholder="..."
-              [matChipInputFor]="sadChipList"
-              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-              [matChipInputAddOnBlur]="addOnBlur"
-              (matChipInputTokenEnd)="addSadItem($event)"
-            />
+            <input placeholder="..." [matChipInputFor]="sadChipList"
+              [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+              (matChipInputTokenEnd)="addSadItem($event)" />
           </mat-chip-list>
-          <mat-hint
-            >** Presiona <strong>ENTER</strong> después de escribir algo que te
+          <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te
             entriztesca, ej:
             <strong>"Delincuencia"</strong>
           </mat-hint>
@@ -232,19 +173,13 @@
             <small>He leído y estoy de acuerdo con:</small>
           </p>
           <div class="set-12 row">
-            <mat-checkbox
-              color="primary"
-              formControlName="terms"
-            ></mat-checkbox>
+            <mat-checkbox color="primary" formControlName="terms"></mat-checkbox>
             <a href="#">
               <small>Términos y condiciones</small>
             </a>
           </div>
           <div class="set-12 row">
-            <mat-checkbox
-              color="primary"
-              formControlName="privacy"
-            ></mat-checkbox>
+            <mat-checkbox color="primary" formControlName="privacy"></mat-checkbox>
             <a href="#">
               <small>Política de privacidad</small>
             </a>
@@ -265,13 +200,8 @@
         <button mat-raised-button color="warn" matStepperPrevious>
           <small>Atras</small>
         </button>
-        <button
-          type="button"
-          mat-raised-button
-          color="primary"
-          [disabled]="legalsFormGroup.invalid"
-          (click)="onRegister()"
-        >
+        <button type="button" mat-raised-button color="primary" [disabled]="legalsFormGroup.invalid"
+          (click)="onRegister()">
           <small>Registrarme</small>
         </button>
         <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
