--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -44,21 +44,19 @@
         </div>
 
         <div class="set-12 cardctrls">
-          <button type="button" mat-mini-fab color="primary" disabled>
+          <button type="button" disabled>
             <mat-icon>favorite</mat-icon>
           </button>
-          <button type="button" mat-mini-fab color="primary" matTooltip="Compartir" matTooltipClass="tooltip"
-            (click)="openBottomSheet()">
+          <button type="button" matTooltip="Compartir" matTooltipClass="tooltip" (click)="openBottomSheet()">
             <mat-icon>share</mat-icon>
           </button>
-          <button type="button" mat-mini-fab color="primary" matTooltip="Comentar" matTooltipClass="tooltip"
-            (click)="handleComments()">
+          <button type="button" matTooltip="Comentar" matTooltipClass="tooltip" (click)="handleComments()">
             <mat-icon>forum</mat-icon>
           </button>
         </div>
       </mat-card>
 
-      <horizontal-stats [users]="userCount" [interactions]="stats?.interactions"></horizontal-stats>
+      <horizontal-stats [users]="stats?.users" [interactions]="stats?.interactions"></horizontal-stats>
     </div>
 
     <div class="set-9 col-rgt">
@@ -67,7 +65,7 @@
         </panel-subcategory>
 
         <div class="set-12 container-titles">
-          <div class="set-12">
+          <div class="set-12 headtools">
             <div class="mt-2 set-3">
               <mat-form-field appearance="outline">
                 <mat-label>Cobertura</mat-label>
@@ -77,6 +75,12 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
+            </div>
+            <div class="set-9">
+              <button type="button" mat-mini-fab color="primary" matTooltip="Agregar tópico" matTooltipClass="tooltip"
+                (click)="popAddDocumentTheme()" *ngIf="isCollaborator">
+                <mat-icon>add_circle</mat-icon>
+              </button>
             </div>
           </div>
 
