--- a/src/app/components/sheet-feed/sheet-feed.component.html
+++ b/src/app/components/sheet-feed/sheet-feed.component.html
@@ -8,7 +8,7 @@
 
 <div class="set-12 actions icons">
   <div class="buttonActions">
-  <button type="button" mat-mini-fab class="actionsAssociation" >
+  <button type="button" mat-mini-fab class="actionsAssociation" disabled >
     <mat-icon>speaker_notes</mat-icon>
   </button>
   <mat-hint><small>Comunicado</small></mat-hint>
