--- a/src/app/associations/associations.component.scss
+++ b/src/app/associations/associations.component.scss
@@ -4,13 +4,19 @@
     float: left;
     mat-card {
         margin-bottom: 10px;
+        box-shadow: none;
       }
       mat-card:last-child{
         margin-bottom: 10px;
+        
       }
   
       p {
         margin-top: 10px;
         margin-bottom: 10px;
+      }
+      .singleAssociationButton{
+        display: flex;
+        justify-content: flex-end;
       }
 }
