--- a/src/app/hub/components/association-register/association-register.component.scss
+++ b/src/app/hub/components/association-register/association-register.component.scss
@@ -20,7 +20,11 @@
           }
           .joinButton {
             display: flex;
-            justify-content: center;
+            justify-content: flex-end;
+            margin-top: 5px;
+            button {
+              width: 85px;
+            }
           }
         }
       }
@@ -33,11 +37,12 @@
     }
 
     .search-hldr {
-      .joinButton {
+      .searchButton {
         display: flex;
         justify-content: flex-end;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin-top: 5px;
+        padding-right: 10px;
+        margin-bottom: 10px;
         button {
           width: 85px;
         }
@@ -77,7 +82,9 @@
     .mat-hint {
       font-size: 13px;
     }
-
+    .ctrls, .register{
+      padding-right: 10px;
+    }
     .ctrls {
       display: flex;
       align-items: center;
@@ -286,5 +293,19 @@
       border-bottom: 0;
       padding-bottom: 0;
     }
+  }
+  .category{
+    
+      p{
+        .mat-icon{
+          font-size: 50pt;
+        }
+      
+    }
+  }
+  .addfile{
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 5px;
   }
 }
