--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,12 +98,12 @@
       <button  type="button" (click)="linkMe('associations')">
         <span>Mis asociaciones</span>
       </button>
-      <button  type="button" disabled>
+      <!-- <button  type="button" disabled>
         <span>Documentos</span>
       </button>
       <button  type="button" disabled>
         <span>Dashboard</span>
-      </button>
+      </button> -->
       <button  type="button" (click)="linkMe('configuration')">
         <span>Configuracion</span>
       </button>
