--- a/src/app/associations/associations.component.html
+++ b/src/app/associations/associations.component.html
@@ -11,12 +11,12 @@
         </p>
         <div class="set-12 singleAssociationButton">
             <button type="button" mat-raised-button color="warn" (click)="linkMe('profile', association._id)" >
-              <small>Ir a perfil</small>
+              <small>Ir a asociación</small>
             </button>
           </div>
       </mat-card>
     </mat-tab>
-    <mat-tab label="Invitaciones">Invitaciones</mat-tab>
+    <!-- <mat-tab label="Invitaciones">Invitaciones</mat-tab> -->
   </mat-tab-group>
 </div>
 
