--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
@@ -29,9 +29,9 @@
             </button> -->
         </div> 
     </mat-card>
-    <mat-paginator [length]="20"
+    <!-- <mat-paginator [length]="20"
     [pageSize]="10"
     [pageSizeOptions]="[5, 10]"
     aria-label="Select page">
-</mat-paginator>
+</mat-paginator> -->
 </div>
