add user count on mobile

--- a/src/app/components/public-document-mobile-view/public-document-mobile-view.component.html
+++ b/src/app/components/public-document-mobile-view/public-document-mobile-view.component.html
@@ -38,7 +38,8 @@
             <small>Usuarios</small>
           </p>
           <p class="amount">
-            <small>{{document.stats?.users}}</small>
+            <!-- <small>{{document.stats?.users}}</small> -->
+            <small>{{userCount}}</small>
           </p>
         </div>
       </div>
