--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -82,6 +82,6 @@
 <!-- mobile -->
 <div class="set-12" *ngIf="isDataAvailable && isMobile">
   <div class="public-document-mobile-view" [user]="user" [document]="document" [topSolutions]="topSolutions"
-    [storedSolutions]="storedSolutions"></div>
+    [storedSolutions]="storedSolutions" [userCount]="userCount"></div>
   <div class="public-document-mobile-fixed-tools" [user]="user" [isCollaborator]="isCollaborator"></div>
 </div>
