add facebook verification meta

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,6 +1,7 @@
 <div class="set-12" *ngIf="!isMobile" [class.fixdesk]="!isMobile">
   <img src="../../../assets/images/mexicolectivo-small-blue.png" alt="Mexicolectivo">
-  <p><small>Todos los derechos reservados</small></p>
+  <p><small>Todos los derechos reservados.</small></p>
+  <p><small>&copy; Pando Servicios Digitales</small></p>
   <p><small>https://mexicolectivo.com/</small></p>
   <p>
     <small>
@@ -11,7 +12,8 @@
 
 <div class="set-12" *ngIf="isMobile" [class.fixmobile]="isMobile">
   <img src="../../../assets/images/mexicolectivo-small-blue.png" alt="Mexicolectivo">
-  <p><small>Todos los derechos reservados</small></p>
+  <p><small>Todos los derechos reservados.</small></p>
+  <p><small>&copy; Pando Servicios Digitales</small></p>
   <p><small>https://mexicolectivo.com/</small></p>
   <p>
     <small>
