--- a/src/app/hub/sign-in/sign-in.component.html
+++ b/src/app/hub/sign-in/sign-in.component.html
@@ -7,7 +7,7 @@
   <div class="set-12 imgdisplay">
     <div class="set-12 imgoverlay"></div>
     <div class="set-12 displayform">
-      <button type="button" class="facebooksignin" (click)="authenticationSrvc.facebookAuth()">
+      <button type="button" class="facebooksignin" (click)="facebookAuth()">
         <img src="../../../assets/images/facebook-white.png" alt="" />
         <span>Seguir con Facebook</span>
       </button>
