--- a/src/app/hub/components/card-topics-desktop/card-topics-desktop.component.scss
+++ b/src/app/hub/components/card-topics-desktop/card-topics-desktop.component.scss
@@ -45,4 +45,19 @@
       margin-right: 0;
     }
   }
+
+  .headtools {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+
+    * {
+      margin: 0;
+    }
+
+    button {
+      margin-left: 10px;
+    }
+  }
 }
