--- a/src/app/hub/sign-in/sign-in.component.html
+++ b/src/app/hub/sign-in/sign-in.component.html
@@ -12,7 +12,7 @@
         <span>Seguir con Facebook</span>
       </button>
 
-      <button type="button" class="googlesignin">
+      <button type="button" class="googlesignin" (click)="authenticationSrvc.googleAuth()">
         <img src="../../../assets/images/google-icon.png" alt="" />
         <span>Seguir con Google</span>
       </button>
