--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,10 +98,10 @@
       <button  type="button" (click)="linkMe('associations')">
         <span>Mis asociaciones</span>
       </button>
-      <!-- <button  type="button" disabled>
-        <span>Documentos</span>
+     <button  type="button"  (click)="linkMe('documents')">
+        <span>Documentos publicos</span>
       </button>
-      <button  type="button" disabled>
+      <!--  <button  type="button" disabled>
         <span>Dashboard</span>
       </button> -->
       <button  type="button" (click)="linkMe('configuration')">
