--- a/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.scss
+++ b/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.scss
@@ -29,6 +29,11 @@
       margin-top: 10px;
       text-align: justify;
     }
+    .dialog-topic{
+      padding: 15px;
+      background: #00031d;
+      color: white
+    }
   }
 
   .info {
