--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -5,15 +5,15 @@
 <div class="set-12" *ngIf="isDataAvailable && isMobile">
   <mat-tab-group [disableRipple]="true" [@.disabled]="true">
     <mat-tab label="Temas">
-      <search-input-mobile></search-input-mobile>
+      <!-- <search-input-mobile></search-input-mobile> -->
 <card-topics-mobile></card-topics-mobile>
     </mat-tab>
-    <mat-tab label="Mi perfil">
+    <!-- <mat-tab label="Mi perfil">
       <spider-chart-mobile></spider-chart-mobile>
       <circle-chart-mobile></circle-chart-mobile>
       <card-solutions-mobile></card-solutions-mobile>
       <line-chart-mobile></line-chart-mobile>
-    </mat-tab>
+    </mat-tab> -->
     <!-- <mat-tab label="Comunidad">
       <search-input-mobile></search-input-mobile>
       <community-mobile></community-mobile>
