--- a/src/styles.scss
+++ b/src/styles.scss
@@ -675,6 +675,15 @@ mat-form-field {
   }
 }
 
+.authorization-dialog{
+  .mat-dialog-container {
+    border-radius: 0 !important;
+    padding: 0;
+    background: #00031d;
+    color: white;
+  }
+}
+
 .viewer-dialog {
   width: 100% !important;
   max-width: 100vw !important;
